# RInS

./: .gitignore  README.md  homework3_map.pgm  improved_map.pgm  improved_map.yaml
src/: task_launch_cmds
src/color_model/Models/: MLPHSV.pkl  MLPRGB.pkl
src/color_model/Results/: modelResults.txt
src/color_model/scripts/: generateDataSet.py  model.py
src/data_viewer/: CMakeLists.txt  package.xml
src/data_viewer/scripts/: extract_digits  extract_qr
src/face_detector/: CMakeLists.txt  package.xml
src/face_detector/launch/: start.launch
src/face_detector/msg/: CylinderD.msg  Detected.msg  FaceDetected.msg
src/face_detector/scripts/: cylinder_markers  draw_markers  face_detector_dlib  face_detector_dnn  face_detector_testing
src/main_package/: CMakeLists.txt  package.xml
src/main_package/scripts/: Main.py  OldMain.py  testP.py
src/markers/: CMakeLists.txt  package.xml
src/markers/launch/: start.launch
src/markers/msg/: RingDetectedMarker.msg
src/markers/scripts/: cylinder_markers  face_markers  ring_markers
src/move_manager/: CMakeLists.txt  package.xml  setup.py
src/move_manager/launch/: move_manager.launch
src/move_manager/scripts/: example.py
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/launch/: find_cylinder.launch  rins_world.launch
src/object_detection/msg/: Cylinder.msg  CylinderDetected.msg  DetectedR.msg  RingDetected.msg
src/object_detection/scripts/: detect_rings  ring_markers
src/robot_arm/: CMakeLists.txt  package.xml
src/simulation/: CMakeLists.txt  package.xml
(+19 files in other folders)
